# Template_SFML

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
src/systems/: TestSystem.cpp  TestSystem.h
